[package]
name = "geoengine-expression-deps"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"
crate-type = ["rlib"]
test = false
doctest = false
bench = false
doc = false
proc-macro = false
harness = false

[dependencies]
geo = "0.29.3"
geo-types = "0.7.15" # important for compatibility when linking
