[package]
name = "geoengine-expression-deps"
version = "0.0.0"
edition = "2024"

[lib]
path = "lib.rs"
crate-type = ["rlib"]
test = false
doctest = false
bench = false
doc = false
proc-macro = false
harness = false

[dependencies]
geo = "0.30.0"
geo-types = "0.7.16" # important for compatibility when linking
